# raycaster

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build_client_x86.bat  build_server_x86.bat  build_x86.bat  raycaster.sln  run.bat  run_client_x86.bat  run_server_x86.bat  run_x86.bat  vcpkg.json
assets/: Thumbs.db
raycaster/: raycaster.vcxproj  raycaster.vcxproj.filters
raycaster/include/raycaster/: bitmap.h
raycaster/src/: bitmap.c  main.c
src/: SDL_image_ext.c  SDL_image_ext.h  audio.c  fonts.c  fonts.h  images.c  input.h  main.c  map.h  math.c  math.h  net.c  player.c  player.h  textures.c  textures.h  window.c
src/client/: SDL_image_ext.c  SDL_image_ext.h  audio.c  audio.h  fonts.c  fonts.h  images.c  images.h  input.c  main.c  net.c  net.h  system.c  system.h  window.c  window.h
src/server/: main.c  net.c  system.c
src/shared/: SDL_net_ext.c  SDL_net_ext.h  data.c  data.h  map.c  map.h  maths.c  maths.h  net.c  net.h  object.c  object.h  player.c  player.h  util.h
